# trun

./: .gitignore  FEATURES.md  README.md  pyproject.toml  run_all_tests_gdb.md  run_all_tests_gdb.sh
src/trun/: config.py  executor.py  history.py  log_analysis.py  main.py  models.py  playlist.py  runner.py  server.py
tests/: test_cli.py  test_dispatch.py  test_history.py  test_log_analysis.py  test_mcp_ux_improvements.py  test_phase23.py  test_playlist.py  test_runner.py  test_server_helpers.py
